--- a/app/src/main/res/layout/minh_khoanthu_fragment.xml
+++ b/app/src/main/res/layout/minh_khoanthu_fragment.xml
@@ -6,176 +6,12 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <LinearLayout
+
+    <ListView
+        android:id="@+id/lvChonNhomKhoanThu"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
-        android:orientation="horizontal"
-        android:onClick="xuLyKhoanThuGuiTien">
-
-        <ImageView
-            android:id="@+id/imgGuiTien"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
-            android:scaleType="fitXY"
-            app:srcCompat="@drawable/guitien" />
-
-        <TextView
-            android:id="@+id/txtGuiTien"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center|left"
-            android:text="@string/ts_deposit"
-            android:textSize="16sp" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:onClick="xuLyKhoanThuTienLai"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/imgTienLai"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
-            android:scaleType="fitXY"
-            app:srcCompat="@drawable/tienlai" />
-
-        <TextView
-            android:id="@+id/txtTienLai"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center|left"
-            android:text="@string/ts_interest"
-            android:textSize="16sp" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/imgAward"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
-            android:scaleType="fitXY"
-            app:srcCompat="@drawable/minh_award96" />
-
-        <TextView
-            android:id="@+id/txtAward"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center|left"
-            android:text="@string/ts_awarded"
-            android:textSize="16sp" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/imgReward"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
-            android:scaleType="fitXY"
-            app:srcCompat="@drawable/minh_reward96" />
-
-        <TextView
-            android:id="@+id/txtReward"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center|left"
-            android:text="@string/ts_reward"
-            android:textSize="16sp" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/imgSalary"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
-            android:scaleType="fitXY"
-            app:srcCompat="@drawable/minh_salary_96" />
-
-        <TextView
-            android:id="@+id/txtSalary"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center|left"
-            android:text="@string/ts_salary"
-            android:textSize="16sp" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/imgSale"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
-            android:scaleType="fitXY"
-            app:srcCompat="@drawable/minh_sale96" />
-
-        <TextView
-            android:id="@+id/txtSale"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center|left"
-            android:text="@string/ts_sale"
-            android:textSize="16sp" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        >
-
-        <ImageView
-            android:id="@+id/imgGift"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
-            android:scaleType="fitXY"
-            app:srcCompat="@drawable/minh_gift96" />
-
-        <TextView
-            android:id="@+id/txtGift"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center|left"
-            android:text="@string/ts_income_other"
-            android:textSize="16sp" />
-    </LinearLayout>
-
-
+        android:layout_height="match_parent"
+        android:background="@color/colorbackgroundBack"
+        android:divider="@color/colorbackgroundBack"
+        android:dividerHeight="5dp" />
 </LinearLayout>
