--- a/app/src/main/res/layout/minh_custom_listview.xml
+++ b/app/src/main/res/layout/minh_custom_listview.xml
@@ -4,138 +4,31 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/colorbackground"
+    android:background="@color/colorbackgroundBack"
     android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="0.5dp"
-        android:layout_weight="1"
-        android:background="@color/colorbackgroundBack"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/txtNgayListView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="@color/colorbackgroundBack"
-            android:gravity="center"
-            android:text="4"
-            android:textColor="@color/common_google_signin_btn_text_dark_focused"
-            android:textSize="30sp" />
-
-        <LinearLayout
-            android:layout_width="590dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:orientation="horizontal">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="@color/colorbackgroundBack"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/txtThuListView"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginBottom="2dp"
-                    android:text="0"
-                    android:textColor="@color/common_google_signin_btn_text_dark_focused"
-                    android:textSize="12sp" />
-
-                <TextView
-                    android:id="@+id/txtThangNamListView"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="1"
-                    android:textSize="8sp" />
-            </LinearLayout>
-
-            <TextView
-                android:id="@+id/txtSoTienTrenListView"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_weight="1"
-                android:gravity="right"
-                android:text="2"
-                android:textColor="@color/common_google_signin_btn_text_dark_focused"
-                android:textSize="13sp" />
-
-        </LinearLayout>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:background="@color/colorbackgroundBack"
+        android:layout_marginTop="10dp"
         android:orientation="horizontal">
 
         <ImageView
-            android:id="@+id/imgViewListView"
+            android:id="@+id/imgChonNhomListView"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:layout_gravity="center"
-            android:layout_marginLeft="13dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
             app:srcCompat="@drawable/question2" />
 
-        <LinearLayout
-            android:layout_width="290dp"
+        <TextView
+            android:id="@+id/txtChonNhomListView"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_weight="1"
-            android:orientation="vertical">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:layout_marginBottom="5dp"
-                android:layout_weight="1"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/txtNhomListView"
-                    android:layout_width="100dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="4"
-                    android:textColor="@color/common_google_signin_btn_text_dark_focused"
-                    android:textSize="14sp" />
-
-                <TextView
-                    android:id="@+id/txtSoTienListView"
-                    android:layout_width="5dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="10dp"
-                    android:layout_weight="1"
-                    android:gravity="right"
-                    android:text="2"
-                    android:textSize="13sp" />
-            </LinearLayout>
-
-            <TextView
-                android:id="@+id/txtGhiChuListView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:text="5"
-                android:textSize="13sp"
-                tools:layout_editor_absoluteX="86dp"
-                tools:layout_editor_absoluteY="100dp" />
-        </LinearLayout>
-
+            android:layout_gravity="left|center"
+            android:text="nhóm"
+            android:textColor="@color/common_google_signin_btn_text_dark_focused"
+            android:textSize="14sp" />
     </LinearLayout>
 
 </LinearLayout>
