--- a/app/src/main/res/layout/activity_detail_tietkiem.xml
+++ b/app/src/main/res/layout/activity_detail_tietkiem.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainTruong.DetailKeHoachActivity">
+    tools:context=".MainSuKien.ActivityChiTietSuKien">
 
     <TextView
         android:id="@+id/detail_tietKiem"
