--- a/app/src/main/res/layout/truong_fragment_dangapdung.xml
+++ b/app/src/main/res/layout/truong_fragment_dangapdung.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".MainTruong.ChonNhomActivity">
+    android:orientation="vertical">
 
     <ListView
-        android:id="@+id/lvNhom"
+        android:id="@+id/lvkeHoachDangApDung"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_marginTop="16dp" />
 </LinearLayout>
