--- a/app/src/main/res/layout/truong_activity_chitietsukien.xml
+++ b/app/src/main/res/layout/truong_activity_chitietsukien.xml
@@ -5,28 +5,29 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MainTruong.DetailKeHoachActivity">
+    tools:context=".MainSuKien.ActivityChiTietSuKien">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="64dp"
+        android:layout_height="96dp"
         android:layout_marginTop="64dp"
         android:orientation="horizontal">
 
         <ImageView
-            android:id="@+id/imageView10"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
+            android:id="@+id/imgIcon"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
             android:layout_marginLeft="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginRight="16dp"
             android:layout_marginBottom="16dp"
-            app:srcCompat="@drawable/plane1" />
+            app:srcCompat="@drawable/icon_not_selected" />
 
         <TextView
             android:id="@+id/txtDKeHoach"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="64dp"
+            android:layout_marginTop="16dp"
             android:gravity="center_vertical"
             android:textSize="30dp"
             android:textStyle="bold" />
@@ -35,21 +36,23 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="64dp"
+        android:layout_marginTop="-16dp"
         android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/imageView11"
             android:layout_width="32dp"
             android:layout_height="32dp"
-            android:layout_marginLeft="16dp"
+            android:layout_marginLeft="32dp"
             android:layout_marginTop="16dp"
             android:layout_marginRight="16dp"
             android:layout_marginBottom="16dp"
-            app:srcCompat="@drawable/calendar1" />
+            app:srcCompat="@drawable/ic_calendar" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginLeft="16dp"
             android:orientation="vertical">
 
             <TextView
@@ -74,28 +77,29 @@
 
         <ImageView
             android:id="@+id/imageView12"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_marginLeft="32dp"
             android:layout_marginTop="16dp"
             android:layout_marginRight="16dp"
             android:layout_marginBottom="16dp"
-            app:srcCompat="@drawable/money_increase" />
+            android:src="@drawable/ic_cash_color" />
 
         <TextView
             android:id="@+id/textView15"
             android:layout_width="match_parent"
             android:layout_height="32dp"
+            android:layout_marginLeft="16dp"
             android:layout_marginTop="16dp"
             android:gravity="center_vertical"
-            android:text="Tiền mặt" />
+            android:text="Cash" />
     </LinearLayout>
 
     <Button
         android:id="@+id/btnChuaHoanTat"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
+        android:layout_marginLeft="32dp"
         android:background="@color/colorChonVi"
         android:text=" Đánh dấu chưa hoàn tất "
         android:textColor="@color/colorbackgroundBack" />
@@ -104,15 +108,10 @@
         android:id="@+id/btnDSGiaoDich"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
+        android:layout_marginLeft="32dp"
         android:layout_marginTop="16dp"
         android:background="@color/colorChonVi"
         android:text=" Danh sách giao dịch "
         android:textColor="@color/colorLayoutTaskbar" />
 
-    <Button
-        android:id="@+id/btnXoaKeHoach"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Xóa" />
 </LinearLayout>
