--- a/app/src/main/res/layout/truong_item_kehoach.xml
+++ b/app/src/main/res/layout/truong_item_kehoach.xml
@@ -3,17 +3,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorbackgroundListView"
     android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="96dp"
-        android:background="@color/colorLayoutTaskbar"
+        android:layout_marginTop="16dp"
+        android:background="@color/textLoginColor"
         android:orientation="horizontal">
 
         <ImageView
-            android:id="@+id/imageView8"
+            android:id="@+id/imgIcon"
             android:layout_width="64dp"
             android:layout_height="64dp"
             android:layout_margin="16dp"
@@ -63,11 +63,5 @@
         </LinearLayout>
 
     </LinearLayout>
-
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="match_parent"
-        android:layout_height="15dp"
-        android:background="@color/colorbackgroundListView" />
 
 </LinearLayout>
