--- a/app/src/main/res/layout/custom_report_expandlist_header.xml
+++ b/app/src/main/res/layout/custom_report_expandlist_header.xml
@@ -1,24 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:padding="10dp"
     android:layout_height="wrap_content">
-    <ImageView
-        android:id="@+id/imgExListHeaderIcon"
-        android:layout_width="50dp"
-        android:layout_height="50dp" />
-    <TextView
-        android:layout_gravity="center"
-        android:id="@+id/txtExListHeaderType"
-        android:layout_width="250dp"
-        android:textSize="18sp"
-        android:layout_height="wrap_content" />
-    <TextView
-        android:layout_gravity="center"
-        android:textSize="18sp"
-        android:id="@+id/txtExListHeaderValue"
+    <View
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="2dp"
+        android:background="@color/colorReportListBackground"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:id="@+id/llyHeader"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
+        android:paddingStart="?android:attr/expandableListPreferredItemPaddingLeft"
+        android:paddingEnd="25dp">
+        <ImageView
+            android:id="@+id/imgExListHeaderIcon"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            tools:ignore="ContentDescription" />
+        <TextView
+            android:id="@+id/txtExListHeaderType"
+            android:textColor="#FFFFFF"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="0dp"
+            android:layout_width="150dp"
+            android:textSize="20sp"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/txtExListHeaderValue"
+            android:textColor="#FFFFFF"
+            android:layout_gravity="center"
+            android:textSize="18sp"
+            android:gravity="end"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+
 </LinearLayout>
