--- a/app/src/main/res/layout/fragment_report_outcome.xml
+++ b/app/src/main/res/layout/fragment_report_outcome.xml
@@ -1,90 +1,102 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
+    android:id="@+id/scvOutcome"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <TextView
-        android:text="@string/ts_income"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        android:layout_margin="10dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/colorbackground"/>
-    <TextView
-        android:text="@string/ts_income_max"
-        android:layout_margin="10dp"
-        android:textAllCaps="true"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <LinearLayout
-        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_margin="10dp"
-        android:layout_height="wrap_content">
-        <ImageView
-            android:id="@+id/imgOutcomeMax"
-            android:layout_gravity="center"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            tools:ignore="ContentDescription" />
+        android:layout_height="wrap_content"
+        android:descendantFocusability="blocksDescendants"
+        android:background="@drawable/custom_outcome_background"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:gravity="center"
+            android:textColor="#DB392A"
+            android:text="@string/ts_outcome_max"
+            android:textAllCaps="true"
+            android:textSize="18sp" />
+
         <LinearLayout
-            android:layout_width="250dp"
-            android:orientation="vertical"
-            android:layout_height="wrap_content">
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="4dp"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
+            android:paddingStart="?android:attr/expandableListPreferredItemPaddingLeft"
+            android:paddingEnd="25dp"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/imgOutcomeMax"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                tools:ignore="ContentDescription" />
+
             <TextView
                 android:id="@+id/txtOutcomeMaxType"
-                android:layout_width="match_parent"
+                android:textColor="#E91233"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="0dp"
+                android:layout_width="150dp"
+                android:textSize="18sp"
                 android:layout_height="wrap_content" />
-            <TextView
-                android:id="@+id/txtOutcomeMaxDesc"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-        </LinearLayout>
-        <TextView
-            android:id="@+id/txtOutComeMaxValue"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-    </LinearLayout>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/colorbackground"/>
-    <TextView
-        android:layout_marginTop="5dp"
-        android:layout_marginStart="10dp"
-        android:text=""
-        android:textAllCaps="true"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-    <TextView
-        android:id="@+id/txtReportStatus"
-        android:textColor="#DA3232"
-        android:layout_gravity="center"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp"/>
-    <com.razerdp.widget.animatedpieview.AnimatedPieView
-        android:id="@+id/pieView"
-        android:layout_margin="5dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"/>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/colorbackground"/>
-    <ListView
-        android:layout_marginTop="10dp"
-        android:id="@+id/lvOutcome"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
 
-    </ListView>
-</LinearLayout>
+            <TextView
+                android:id="@+id/txtOutcomeMaxValue"
+                android:layout_gravity="center"
+                android:textSize="18sp"
+                android:gravity="end"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"  />
+        </LinearLayout>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/colorbackground" />
+
+        <TextView
+            android:id="@+id/txtOutcomeInfo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="5dp"
+            android:textAllCaps="true"
+            android:textColor="#2B75F7"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
+        <com.razerdp.widget.animatedpieview.AnimatedPieView
+            android:id="@+id/pvOutcome"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="5dp" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/colorbackground" />
+
+        <ExpandableListView
+            android:id="@+id/elvOutcome"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorReportListBackground"
+            android:childDivider="#00000000"
+            android:divider="@color/colorReportListBackground"
+            android:dividerHeight="1dp"/>
+
+    </LinearLayout>
+
+</ScrollView>
