--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#4CAF50</color>
+    <!--<color name="colorPrimary">#4CAF50</color>-->
+    <color name="colorPrimary">#1565C0</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
     <color name="colorFloatButton">#4CAF50</color>
@@ -25,5 +26,6 @@
     <color name="cardFragmentToolbarBackground">#5314D0</color>
     <color name="colorbackgroundActionbar">#E5E4E5</color>
 
+    <color name="colorReportListBackground">#E1F8DC</color>
 
 </resources>
