--- a/app/src/main/res/layout/fragment_report_outcome.xml
+++ b/app/src/main/res/layout/fragment_report_outcome.xml
@@ -4,90 +4,98 @@
     android:id="@+id/scvOutcome"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
 
+    android:orientation="vertical">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:descendantFocusability="blocksDescendants"
-        android:background="@drawable/custom_outcome_background"
-        android:orientation="vertical">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:gravity="center"
-            android:textColor="#DB392A"
-            android:text="@string/ts_outcome_max"
-            android:textAllCaps="true"
-            android:textSize="18sp" />
-
+        android:orientation="vertical"
+        android:layout_height="wrap_content">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="4dp"
-            android:paddingTop="5dp"
-            android:paddingBottom="5dp"
-            android:paddingStart="?android:attr/expandableListPreferredItemPaddingLeft"
-            android:paddingEnd="25dp"
-            android:orientation="horizontal">
+            android:descendantFocusability="blocksDescendants"
+            android:background="@drawable/background_simple3"
 
-            <ImageView
-                android:id="@+id/imgOutcomeMax"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_gravity="center"
-                tools:ignore="ContentDescription" />
+            android:orientation="vertical">
 
             <TextView
-                android:id="@+id/txtOutcomeMaxType"
-                android:textColor="#E91233"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:layout_marginStart="10dp"
-                android:layout_marginEnd="0dp"
-                android:layout_width="150dp"
-                android:textSize="18sp"
-                android:layout_height="wrap_content" />
-
-            <TextView
-                android:id="@+id/txtOutcomeMaxValue"
-                android:layout_gravity="center"
-                android:textSize="18sp"
-                android:gravity="end"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"  />
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:gravity="center"
+                android:textColor="#DB392A"
+                android:text="@string/ts_outcome_max"
+                android:textAllCaps="true"
+                android:textSize="18sp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="4dp"
+                android:paddingTop="5dp"
+                android:paddingBottom="5dp"
+                android:paddingStart="?android:attr/expandableListPreferredItemPaddingLeft"
+                android:paddingEnd="25dp"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/imgOutcomeMax"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center"
+                    tools:ignore="ContentDescription" />
+
+                <TextView
+                    android:id="@+id/txtOutcomeMaxType"
+                    android:textColor="#E91233"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginEnd="0dp"
+                    android:layout_width="150dp"
+                    android:textSize="18sp"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:id="@+id/txtOutcomeMaxValue"
+                    android:layout_gravity="center"
+                    android:textSize="18sp"
+                    android:gravity="end"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"  />
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/colorbackground" />
+
+            <TextView
+                android:id="@+id/txtOutcomeInfo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_margin="5dp"
+                android:textAllCaps="true"
+                android:textColor="#2B75F7"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+            <com.razerdp.widget.animatedpieview.AnimatedPieView
+                android:id="@+id/pvOutcome"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_margin="5dp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/colorbackground" />
+
+
+
         </LinearLayout>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/colorbackground" />
-
-        <TextView
-            android:id="@+id/txtOutcomeInfo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_margin="5dp"
-            android:textAllCaps="true"
-            android:textColor="#2B75F7"
-            android:textSize="18sp"
-            android:textStyle="bold" />
-
-        <com.razerdp.widget.animatedpieview.AnimatedPieView
-            android:id="@+id/pvOutcome"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_margin="5dp" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/colorbackground" />
-
         <ExpandableListView
             android:id="@+id/elvOutcome"
             android:layout_width="match_parent"
@@ -96,7 +104,7 @@
             android:childDivider="#00000000"
             android:divider="@color/colorReportListBackground"
             android:dividerHeight="1dp"/>
-
     </LinearLayout>
+
 
 </ScrollView>
