--- a/app/src/main/res/layout/activity_doc.xml
+++ b/app/src/main/res/layout/activity_doc.xml
@@ -11,7 +11,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorbackgroundActionbar"
+        android:background="@color/colorPrimary"
         android:orientation="horizontal">
 
         <ImageView
