--- a/app/src/main/res/drawable/custom_user_info_button.xml
+++ b/app/src/main/res/drawable/custom_user_info_button.xml
@@ -3,8 +3,6 @@
     android:shape="rectangle"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <corners android:radius="10dp"/>
-    <gradient
-        android:startColor="#6387E4"
-        android:centerColor="#8BABDA"
-        android:endColor="#D3C2E6"/>
+    <stroke android:color="#FFFFFF"
+        android:width="2dp"/>
 </shape>
