--- a/app/src/main/res/layout/fragment_report_outcome.xml
+++ b/app/src/main/res/layout/fragment_report_outcome.xml
@@ -4,98 +4,91 @@
     android:id="@+id/scvOutcome"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-
     android:orientation="vertical">
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:orientation="vertical"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@drawable/background_simple3"
+        android:descendantFocusability="blocksDescendants"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:gravity="center"
+            android:text="@string/ts_outcome_max"
+            android:textAllCaps="true"
+            android:textColor="#DB392A"
+            android:textSize="18sp" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:descendantFocusability="blocksDescendants"
-            android:background="@drawable/background_simple3"
+            android:layout_margin="4dp"
+            android:orientation="horizontal"
+            android:paddingStart="?android:attr/expandableListPreferredItemPaddingLeft"
+            android:paddingTop="5dp"
+            android:paddingEnd="25dp"
+            android:paddingBottom="5dp">
 
-            android:orientation="vertical">
+            <ImageView
+                android:id="@+id/imgOutcomeMax"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                tools:ignore="ContentDescription" />
 
             <TextView
-                android:layout_width="match_parent"
+                android:id="@+id/txtOutcomeMaxType"
+                android:layout_width="150dp"
                 android:layout_height="wrap_content"
-                android:layout_margin="5dp"
+                android:layout_gravity="center"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="0dp"
                 android:gravity="center"
-                android:textColor="#DB392A"
-                android:text="@string/ts_outcome_max"
-                android:textAllCaps="true"
+                android:textColor="#E91233"
                 android:textSize="18sp" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="4dp"
-                android:paddingTop="5dp"
-                android:paddingBottom="5dp"
-                android:paddingStart="?android:attr/expandableListPreferredItemPaddingLeft"
-                android:paddingEnd="25dp"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:id="@+id/imgOutcomeMax"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:layout_gravity="center"
-                    tools:ignore="ContentDescription" />
-
-                <TextView
-                    android:id="@+id/txtOutcomeMaxType"
-                    android:textColor="#E91233"
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginEnd="0dp"
-                    android:layout_width="150dp"
-                    android:textSize="18sp"
-                    android:layout_height="wrap_content" />
-
-                <TextView
-                    android:id="@+id/txtOutcomeMaxValue"
-                    android:layout_gravity="center"
-                    android:textSize="18sp"
-                    android:gravity="end"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"  />
-            </LinearLayout>
-
             <TextView
+                android:id="@+id/txtOutcomeMaxValue"
                 android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/colorbackground" />
-
-            <TextView
-                android:id="@+id/txtOutcomeInfo"
-                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_margin="5dp"
-                android:textAllCaps="true"
-                android:textColor="#2B75F7"
-                android:textSize="18sp"
-                android:textStyle="bold" />
-
-            <com.razerdp.widget.animatedpieview.AnimatedPieView
-                android:id="@+id/pvOutcome"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_margin="5dp" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/colorbackground" />
-
-
-
+                android:gravity="end"
+                android:textSize="18sp" />
         </LinearLayout>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/colorbackground" />
+
+        <TextView
+            android:id="@+id/txtOutcomeInfo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="5dp"
+            android:textAllCaps="true"
+            android:textColor="#2B75F7"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
+        <com.razerdp.widget.animatedpieview.AnimatedPieView
+            android:id="@+id/pvOutcome"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="5dp" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/colorbackground" />
+
+
         <ExpandableListView
             android:id="@+id/elvOutcome"
             android:layout_width="match_parent"
@@ -103,7 +96,7 @@
             android:background="@color/colorReportListBackground"
             android:childDivider="#00000000"
             android:divider="@color/colorReportListBackground"
-            android:dividerHeight="1dp"/>
+            android:dividerHeight="1dp" />
     </LinearLayout>
 
 
