--- a/app/src/main/res/menu/main_actionbar.xml
+++ b/app/src/main/res/menu/main_actionbar.xml
@@ -5,14 +5,8 @@
     tools:context=".MainActivity">
     <item
         android:id="@+id/mnuScanner"
-        android:title="Scanner"
+        android:title="@string/action_scan"
         android:icon="@drawable/ic_center_focus_strong_white_24dp"
         app:showAsAction="always"/>
-    <item
-        android:title="Change Info"
-        android:id="@+id/mnuUserInfo"/>
-    <item
-        android:title="About"
-        android:id="@+id/mnuAbout"/>
 
 </menu>
