minh add phuong thuc thanh toan

--- a/app/src/main/res/layout/activity_edit_thu_chi.xml
+++ b/app/src/main/res/layout/activity_edit_thu_chi.xml
@@ -171,29 +171,32 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:onClick="xuLyChonPhuongThucEdit"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginBottom="5dp"
                     android:orientation="horizontal">
 
                     <ImageView
-                        android:id="@+id/imageView4"
-                        android:layout_width="30dp"
-                        android:layout_height="22dp"
+                        android:id="@+id/imgPhuongThucTTEdit"
+                        android:layout_width="25dp"
+                        android:layout_height="25dp"
                         android:layout_gravity="center"
                         android:layout_marginLeft="20dp"
                         android:layout_marginRight="20dp"
-                        android:layout_weight="1"
+                        android:onClick="xuLyChonPhuongThucEdit"
                         app:srcCompat="@drawable/wallet_picture" />
 
                     <EditText
-                        android:id="@+id/edtChonVi"
+                        android:id="@+id/edtPhuongThucTTEdit"
                         android:layout_width="300dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:ems="10"
-                        android:hint="Chọn ví"
+                        android:focusable="false"
+                        android:hint="Chọn phương thức thanh toán"
                         android:inputType="textPersonName"
+                        android:onClick="xuLyChonPhuongThucEdit"
                         android:textSize="14sp" />
 
                 </LinearLayout>
