--- a/app/src/main/res/layout/activity_doc.xml
+++ b/app/src/main/res/layout/activity_doc.xml
@@ -40,7 +40,7 @@
                 android:id="@+id/imgViewSave"
                 android:layout_width="28dp"
                 android:layout_height="28dp"
-                android:layout_marginTop="17dp"
+                android:layout_marginTop="15dp"
                 android:onClick="xuLyLuu"
                 android:scaleType="fitXY"
                 app:srcCompat="@drawable/minh_save" />
@@ -125,9 +125,8 @@
 
         <EditText
             android:id="@+id/edtEditSoTien"
-            android:layout_width="10dp"
+            android:layout_width="120dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:ems="10"
             android:gravity="center"
             android:inputType="number"
@@ -181,7 +180,7 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:id="@+id/imageView14"
+            android:id="@+id/imgPhuongThucDoc"
             android:layout_width="32dp"
             android:layout_height="32dp"
             android:layout_marginLeft="15dp"
@@ -190,14 +189,16 @@
             android:layout_marginBottom="10dp"
             app:srcCompat="@drawable/minh_wallet" />
 
-        <TextView
-            android:id="@+id/txtEditVi"
-            android:layout_width="300dp"
+        <EditText
+            android:id="@+id/edtPhuongThucDoc"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:focusable="false"
             android:gravity="center|left"
+            android:onClick="xuLyChonPhuongThucDoc"
             android:text="TextView"
-            android:textColor="@color/common_google_signin_btn_text_dark_focused" />
+            android:textColor="@color/common_google_signin_btn_text_dark_focused"
+            android:textSize="14sp" />
     </LinearLayout>
 
 </LinearLayout>
