--- a/app/src/main/res/layout/bill_custom_listview_ended.xml
+++ b/app/src/main/res/layout/bill_custom_listview_ended.xml
@@ -28,12 +28,27 @@
                 android:id="@+id/txtNameBill"
                 android:layout_width="wrap_content"
                 android:layout_height="32dp" />
-            <TextView
-                android:id="@+id/txtNote"
-                android:layout_marginTop="8dp"
-                android:layout_marginLeft="12dp"
+            <RelativeLayout
+                android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/txtNote"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginLeft="12dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+                <ImageView
+                    android:layout_marginRight="20dp"
+                    android:layout_alignParentRight="true"
+                    android:id="@+id/imgDelete"
+                    android:src="@drawable/ic_delete"
+                    android:layout_width="32dp"
+                    android:layout_height="32dp" />
+            </RelativeLayout>
+
 
             <TextView
                 android:layout_marginTop="12dp"
