minh refactor code

--- a/app/src/main/res/layout/activity_doc.xml
+++ b/app/src/main/res/layout/activity_doc.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/colorbackgroundBack"
     android:orientation="vertical"
-    tools:context=".MinhLayout.DocActivity">
+    tools:context=".Transaction.View.DetailTransactionActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
