--- a/app/src/main/res/layout/activity_edit_thu_chi.xml
+++ b/app/src/main/res/layout/activity_edit_thu_chi.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content"
     android:background="@color/colorbackgroundActionbar"
     android:orientation="vertical"
-    tools:context=".MinhLayout.EditThuChiActivity">
+    tools:context=".Transaction.View.EditTransactionActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
